<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home"
        android:title="@string/nav_home"
        android:showAsAction="always|withText"
        android:orderInCategory="1" />
    <item
        android:id="@+id/nav_records"
        android:icon="@drawable/ic_list"
        android:title="@string/nav_records"
        android:showAsAction="always|withText"
        android:orderInCategory="2" />
    <item
        android:id="@+id/nav_analysis"
        android:icon="@drawable/ic_knowledge"
        android:title="@string/nav_analysis"
        android:showAsAction="always|withText"
        android:orderInCategory="3" />
    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/ic_person"
        android:title="@string/nav_profile"
        android:showAsAction="always|withText"
        android:orderInCategory="4" />
</menu>
